--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+.head{
+    color: orange;
+}
+.pp{
+    color: gray;
+    
+}
+.bb{
+    font-weight: 700;
+    color: red;
+    font-size: medium;
+}
+
+.bold{
+    font-size: x-large;
+    color: blue;
+}
